--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -11,7 +11,11 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v4
-      - name: Deploy
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
+      - name: Install Wrangler
+        run: npm install -g wrangler@4.19.1
+
+      - name: Publish to Cloudflare Workers
+        run: wrangler publish --verbose
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
