--- a/.github/workflows/wrangler.yml
+++ b/.github/workflows/wrangler.yml
@@ -16,6 +16,6 @@ jobs:
         run: npm install -g wrangler@4.19.1
 
       - name: Publish to Cloudflare Workers
-        run: wrangler publish --verbose
+        run: wrangler deploy --log-level debug
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
