--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,7 @@
-name = "todo-preview-prod"
-main = "src/index.js"
-account_id = "c5b4810772f7ad8dc1f27f477eecca3e"
+main = "src/index.js"Add commentMore actions
+account_id = "9bccf61ade33a74db17940fb28b60248"
 compatibility_date = "2025-06-08"
-workers_dev = true
+
+[[kv_namespaces]]
+binding = "TODOS"
+id = "todos_namespace"
