--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,10 @@ workers_dev = true
 [[kv_namespaces]]
 binding = "TODOS"
 id = "a54e9c2e6d5740dda734df7490524d3a"
+
+[env.dev]
+name = "todo-preview-dev"
+
+[[env.dev.kv_namespaces]]
+binding = "TODOS"
+id = "2f675112270b4133b1a48cc32f860baf"
